--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,28 @@
+@import url('https://fonts.googleapis.com/css?family=Lobster+Two');
+
 .App {
   text-align: center;
+  background: #060708;
+  color: white;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  /*animation: App-logo-spin infinite 20s linear;*/
+  height: 20vmin;
   pointer-events: none;
+  padding-top: 3%;
+  font-family: 'Lobster Two', cursive;
+  font-size: 400%;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #444b58;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: calc(15px + 2vmin);
 }
 
 .App-link {
@@ -30,4 +36,49 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.nav-link {
+  color: white;
+}
+
+.landing {
+  background: rgb(34, 34, 34);
+  font-size: auto;
+}
+
+.library {
+  background: #060708; 
+  font-family: 'Lobster Two', cursive;
+  color: white;
+  font-size: 150%;
+}
+
+.player-bar {
+  background: #060708;
+}
+
+.player-bar-buttons {
+  background: #bdbdbe;
+}
+
+.album-info {
+  padding-left: 0%;
+  text-align: center;
+}
+
+.name-centered{
+  text-align: center;
+}
+
+.songID {
+  padding-left: 25%;
+}
+
+.songTitle {
+  padding-left: 20%;
+}
+
+.songDuration {
+  padding-right: 25%;
 }
